# spadunit

./: Makefile  Makefile.am  Makefile.mk  README.md  ascompiler  build-setup.sh  clean-setup.sh  configure.ac  interpreter  spadcompiler  spadunit.spad
projects/fricas/test/: taylor.input.test  xhashdbg.input.test  xhashtable.input-test
src/: Makefile.am  Makefile.mk  ascompiler  configure.ac  list.input.test  set.input.test  spadunit.spad  string.input.test  xhashdebug.spad
